[gd_scene load_steps=12 format=3 uid="uid://bxkay2llwm3e3"]

[ext_resource type="Script" uid="uid://pq7m2tscjye2" path="res://Scripts/Objects/wooden_workbench.gd" id="1_g0q8y"]
[ext_resource type="Texture2D" uid="uid://co4opw50ftjxw" path="res://Texture/Environment/Structures/Stations/Workbench/wooden_workbench_model.png" id="1_j18dh"]
[ext_resource type="Script" uid="uid://dn00porx1t3er" path="res://Scripts/Objects/placeable_checker.gd" id="2_pv8j5"]
[ext_resource type="Shader" uid="uid://plt5r7yv036c" path="res://Assets/hit_flash.tres" id="2_ru5u3"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_8x266"]
resource_local_to_scene = true
shader = ExtResource("2_ru5u3")
shader_parameter/enable = false
shader_parameter/tint = Color(1, 1, 1, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_prdei"]
size = Vector2(32, 9)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j18dh"]
size = Vector2(32, 24)

[sub_resource type="Animation" id="Animation_g0q8y"]
resource_name = "hit_flash"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("WorkbenchTexture:material:shader_parameter/enable")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_3vi1p"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("WorkbenchTexture:material:shader_parameter/enable")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ru5u3"]
_data = {
&"RESET": SubResource("Animation_3vi1p"),
&"hit_flash": SubResource("Animation_g0q8y")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g0q8y"]
size = Vector2(32, 18)

[node name="WorkBench" type="StaticBody2D" groups=["Buildings"]]
collision_layer = 33
collision_mask = 33
script = ExtResource("1_g0q8y")

[node name="WorkbenchTexture" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_8x266")
position = Vector2(48, -6)
texture = ExtResource("1_j18dh")
offset = Vector2(-48, 6)

[node name="WorkbenchCollision" type="CollisionShape2D" parent="."]
position = Vector2(0, 1.5)
shape = SubResource("RectangleShape2D_prdei")

[node name="Placeable" type="Area2D" parent="."]
visible = false
collision_layer = 33
collision_mask = 33
script = ExtResource("2_pv8j5")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Placeable"]
position = Vector2(0, 4)
shape = SubResource("RectangleShape2D_j18dh")

[node name="hit_flash" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_ru5u3")
}

[node name="hurt_box" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurt_box"]
position = Vector2(0, 2)
shape = SubResource("RectangleShape2D_g0q8y")

[connection signal="body_entered" from="Placeable" to="Placeable" method="_on_body_entered"]
[connection signal="body_exited" from="Placeable" to="Placeable" method="_on_body_exited"]
[connection signal="area_entered" from="hurt_box" to="." method="_on_hurt_box_area_entered"]
